# mysoc-mailchimp

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: blog_to_mailchimp.yml  send_update.yml  send_update_democracy.yml
config/: blank.yaml  repower-democracy.yaml
src/mysoc_mailchimp/: __init__.py  __main__.py  gdoc.py  mailchimp.py  scraping.py  send_mailing_list.py  twfy.py  wordpress_api.py  wordpress_funcs.py
tests/: test_meta.py  test_mysoc_mailchimp.py
