[tool.poetry]
name = "mysoc-mailchimp"
version = "0.1.0"
description = "CLI for common mailchimp functions"
authors = ["mySociety <alex.parsons@mysociety.org>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mysociety/mysoc-mailchimp"
repository = "https://github.com/mysociety/mysoc-mailchimp"
include = [
    "LICENSE.md",
]

[tool.poetry.scripts]
msmc = 'mysoc_mailchimp.__main__:main'

[tool.poetry_bumpversion.file."src/mysoc_mailchimp/__init__.py"]

[tool.poetry.dependencies]
python = "^3.8"
mailchimp-marketing = {git = "https://github.com/mailchimp/mailchimp-marketing-python.git"}
click = "^8.1.3"
rich-click = "^1.6.1"
pandas = "^2.0.1"
bs4 = "^0.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.3.0"
pyright = "^1.1"
toml = "^0.10.2"
ruff = "^0.0.264"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"